# algn2pheno

./: README.md  pyproject.toml
src/algn2pheno/: __init__.py  __main__.py  a2p_classes.py  arg_input.py  requirements.txt
src/aln2pheno/: __main__.py
tests/: test_align2pheno.py
