[tool.poetry]
name = "aln2pheno"
version = "1.0.2"
description = "A bioinformatics tool for rapid screening of genetic features (nt or aa changes) potentially linked to specific phenotypes"
authors = ["SantosJGND <dourado.jns@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<4.0"
numpy = "^1.3"
biopython = "^1.79"
pandas = "^1.3.5"
sqlalchemy = "^1.4.4"

readme = "README.md"

repository="https://github.com/SantosJGND/aln2pheno"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aln2pheno = "aln2pheno.__main__:main"
