[tool.poetry]
name = "algn2pheno"
version = "1.1.3"
description = "A bioinformatics tool for rapid screening of genetic features (nt or aa changes) potentially linked to specific phenotypes"
authors = ["SantosJGND <dourado.jns@gmail.com>"]
license = "MIT"
readme = "README.md"
repository="https://github.com/SantosJGND/algn2pheno"


[tool.poetry.dependencies]
python = "^3.8,<4.0"
numpy = "^1.3"
biopython = "^1.79"
pandas = "^1.3.5"
sqlalchemy = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
algn2pheno = "algn2pheno.__main__:main"
